test/tests/compiler/8_loops/invalid_parse/extra_credit/switch_missing_case_value.plx
pub fn main(none) i32 {
    match 0 {
        -> { return 0 }
    }
}
